--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,26 @@
         <servlet-name>YoServlet</servlet-name>
         <url-pattern>/yo</url-pattern>
     </servlet-mapping>
+    <security-constraint>
+        <display-name>statsConstraint</display-name>
+        <web-resource-collection>
+            <web-resource-name>stats</web-resource-name>
+            <description/>
+            <url-pattern>/stats</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description>role_admin</description>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>BASIC</auth-method>
+        <realm-name>basic</realm-name>
+    </login-config>
+    <security-role>
+        <description/>
+        <role-name>admin</role-name>
+    </security-role>
     <env-entry>
         <env-entry-name>instanceName</env-entry-name>
         <env-entry-type>java.lang.String</env-entry-type>
