--- a/miniurl/pom.xml
+++ b/miniurl/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>derbytools</artifactId>
             <version>10.13.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
     <build>
