--- a/minispring/pom.xml
+++ b/minispring/pom.xml
@@ -31,8 +31,12 @@
             <artifactId>jstl-api</artifactId>
             <version>1.2</version>
         </dependency>
-        
-        
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jstl-impl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
