--- a/minispring/src/main/resources/log4j.properties
+++ b/minispring/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=info, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd'T'HH:mm:ss,SSS}{UTC}Z][%p][%F:%L] %m%n
