--- a/minispring/pom.xml
+++ b/minispring/pom.xml
@@ -16,9 +16,9 @@
     
     <dependencies>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.7</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
