--- a/minispring/pom.xml
+++ b/minispring/pom.xml
@@ -68,6 +68,11 @@
             <version>4.3.5.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>4.3.5.RELEASE</version>
