--- a/minispring/pom.xml
+++ b/minispring/pom.xml
@@ -128,7 +128,11 @@
             <artifactId>jackson-datatype-jdk8</artifactId>
             <version>2.8.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.8.6</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-core</artifactId>
